5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1871_1716.log
== SUBMITION (2019-07-02 16:09:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

if i in range(0,entrada1):
	if in range(0,entrada1):
		matriz[i,j] = sum(matriz) + 1
	print(matriz)
-- EXECUTION TIME:
0.873217
-- ERROR:
  File "/home/codebench/codes/1871/1716/main.py", line 10
    if in range(0,entrada1):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:09:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

if i in range(0,entrada1):
	if in range(0,entrada1):
		matriz[i,j] = sum(matriz) + 1
	print(matriz)
-- ERROR:
File "XXXX", line 10
    if in range(0,entrada1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:09:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

if i in range(0,entrada1):
	if j in range(0,entrada1):
		matriz[i,j] = sum(matriz) + 1
	print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:09:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

if i in range(0,entrada1):
	if j in range(0,entrada1):
		matriz[i,j] = sum(matriz) + 1
	print(matriz)
-- EXECUTION TIME:
0.953023
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 9, in <module>
    if i in range(0,entrada1):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

if i in range(0,entrada1):
	if j in range(0,entrada2):
		matriz[i,j] = sum(matriz) + 1
	print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:10:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

if i in range(0,entrada1):
	if j in range(0,entrada2):
		matriz[i,j] = sum(matriz) + 1
	print(matriz)
-- EXECUTION TIME:
0.986964
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 9, in <module>
    if i in range(0,entrada1):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada2):
		matriz[i,j] = sum(matriz) + 1
	print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:10:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada2):
		matriz[i,j] = sum(matriz) + 1
	print(matriz)
-- EXECUTION TIME:
0.970813
-- TEST CASE 1:
---- input:
3
1
---- correct output:
5
---- user output:
[[1]
 [0]
 [0]]
[[1]
 [2]
 [0]]
[[1]
 [2]
 [4]]
-- TEST CASE 2:
---- input:
2
3
---- correct output:
8
---- user output:
[[1 2 4]
 [0 0 0]]
[[ 1  2  4]
 [ 8 16 32]]
-- TEST CASE 3:
---- input:
4
2
---- correct output:
2
---- user output:
[[1 2]
 [0 0]
 [0 0]
 [0 0]]
[[1 2]
 [4 8]
 [0 0]
 [0 0]]
[[ 1  2]
 [ 4  8]
 [16 32]
 [ 0  0]]
[[  1   2]
 [  4   8]
 [ 16  32]
 [ 64 128]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:10:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada1):
		matriz[i,j] = sum(matriz) + 1
	print(matriz)
-- EXECUTION TIME:
1.09327
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 11, in <module>
    matriz[i,j] = sum(matriz) + 1
IndexError: index 1 is out of bounds for axis 1 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada1):
		matriz[i,j] = sum(matriz) + 1
	print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada1):
		#matriz[i,j] = sum(matriz) + 1
	print(sum(matriz))
-- ERROR:
File "XXXX", line 12
    print(sum(matriz))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:11:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada1):
		#matriz[i,j] = sum(matriz) + 1
	print(sum(matriz))
-- EXECUTION TIME:
0.802073
-- ERROR:
  File "/home/codebench/codes/1871/1716/main.py", line 12
    print(sum(matriz))
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada1):
		#matriz[i,j] = sum(matriz) + 1
		print(sum(matriz))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:11:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros((entrada1,entrada2),dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada1):
		#matriz[i,j] = sum(matriz) + 1
		print(sum(matriz))
-- EXECUTION TIME:
1.49094
-- TEST CASE 1:
---- input:
3
1
---- correct output:
5
---- user output:
0
0
0
0
0
0
0
0
0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
8
---- user output:
Valor 1: Valor 2: 0
0
0
0
-- TEST CASE 3:
---- input:
4
2
---- correct output:
2
---- user output:
Valor 1: Valor 2: 0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:12:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros(25,dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada1):
		matriz[i,j] = sum(matriz) + 1
	print(sum(matriz))
-- EXECUTION TIME:
1.14989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 11, in <module>
    matriz[i,j] = sum(matriz) + 1
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:12:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros(25,dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada1):
		matriz[i,j] = sum(matriz) + 1
	print(sum(matriz))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:13:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros(25,dtype=int)

for i in range(0,entrada1):
	for j in range(0,entrada1):
		matriz[3,3] = sum(matriz) + 1
	print(sum(matriz))
-- EXECUTION TIME:
1.09483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 11, in <module>
    matriz[3,3] = sum(matriz) + 1
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:16:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros(25,dtype=int)

for i in range(25):
	matriz[i] = sum(matriz) + 1
	print(sum(matriz))
-- EXECUTION TIME:
0.977279
-- TEST CASE 1:
---- input:
3
1
---- correct output:
5
---- user output:
1
3
7
15
31
63
127
255
511
1023
2047
4095
8191
16383
32767
65535
131071
262143
524287
1048575
2097151
4194303
8388607
16777215
33554431
-- TEST CASE 2:
---- input:
2
3
---- correct output:
8
---- user output:
1
3
7
15
31
63
127
255
511
1023
2047
4095
8191
16383
32767
65535
131071
262143
524287
1048575
2097151
4194303
8388607
16777215
33554431
-- TEST CASE 3:
---- input:
4
2
---- correct output:
2
---- user output:
1
3
7
15
31
63
127
255
511
1023
2047
4095
8191
16383
32767
65535
131071
262143
524287
1048575
2097151
4194303
8388607
16777215
33554431
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros(25,dtype=int)

for i in range(25):
	matriz[i] = sum(matriz) + 1
print(sum(matriz))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:16:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros(25,dtype=int)

for i in range(25):
	matriz[i] = sum(matriz) + 1
print(sum(matriz))
-- EXECUTION TIME:
1.054
-- TEST CASE 1:
---- input:
3
1
---- correct output:
5
---- user output:
33554431
-- TEST CASE 2:
---- input:
2
3
---- correct output:
8
---- user output:
Valor 1: Valor 2: 33554431
-- TEST CASE 3:
---- input:
4
2
---- correct output:
2
---- user output:
Valor 1: Valor 2: 33554431
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros(25,dtype=int)

for i in range(25):
	matriz[i] = sum(matriz)
print(sum(matriz))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:17:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Valor 2: "))

matriz = zeros(25,dtype=int)

for i in range(25):
	matriz[i] = sum(matriz)
print(sum(matriz))
-- EXECUTION TIME:
0.916846
-- TEST CASE 1:
---- input:
3
1
---- correct output:
5
---- user output:
0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
8
---- user output:
0
-- TEST CASE 3:
---- input:
4
2
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:32:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Vallor 2"))

for entrada1 in range(tabela):
	for entrada2 in range(tabela):
		resultado[entrada1,entrada2] = tabela(entrada1,entrada2)
	print(resultado)
		
-- EXECUTION TIME:
0.980312
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 15, in <module>
    for entrada1 in range(tabela):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Vallor 2"))

for entrada1 in range(tabela):
	for entrada2 in range(tabela):
		resultado[entrada1,entrada2] = tabela(entrada1,entrada2)
	print(resultado)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

entrada1 = int(input("Valor 1: "))
entrada2 = int(input("Vallor 2"))

for entrada1 in range(tabela):
	for entrada2 in range(tabela):
		resultado[entrada1,entrada2] = tabela(entrada1,entrada2)
	print(resultado)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Vallor 2: "))

for i in range(tabela):
	for j in range(tabela):
		resultado[i,j] = tabela(i,j)
	print(resultado)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Vallor 2: "))

for i in range(tabela):
	for j in range(tabela):
		resultado[i,j] = tabela[i,j]
	print(resultado)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:44:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Vallor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(matriz):
	for j in range(matriz):
		resultado[i,j] = tabela[i,j]
	print(resultado)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Vallor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(matriz):
	for j in range(matriz):
		print(i,j)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:46:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(matriz):
	for j in range(matriz):
		print(i,j)
		
-- EXECUTION TIME:
0.95741
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 17, in <module>
    for i in range(matriz):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:46:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(matriz):
	for j in range(matriz):
		print(tabela[i,j])
		
-- EXECUTION TIME:
1.12543
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 17, in <module>
    for i in range(matriz):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:46:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(matriz):
	for j in range(matriz):
		print(tabela[i,j])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:46:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

#for i in range(matriz):
#	for j in range(matriz):
#		print(tabela[i,j])

print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:47:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

#for i in range(matriz):
#	for j in range(matriz):
#		print(tabela[i,j])

print(matriz)
-- EXECUTION TIME:
1.25215
-- TEST CASE 1:
---- input:
3
1
---- correct output:
5
---- user output:
[[0 0 0 0 0]
 [0 0 0 0 0]
 [0 0 0 0 0]
 [0 0 0 0 0]
 [0 0 0 0 0]]
-- TEST CASE 2:
---- input:
2
3
---- correct output:
8
---- user output:
Valor 1: Valor 2: [[0 0 0 0 0]
 [0 0 0 0 0]
 [0 0 0 0 0]
 [0 0 0 0 0]
 [0 0 0 0 0]]
-- TEST CASE 3:
---- input:
4
2
---- correct output:
2
---- user output:
Valor 1: Valor 2: [[0 0 0 0 0]
 [0 0 0 0 0]
 [0 0 0 0 0]
 [0 0 0 0 0]
 [0 0 0 0 0]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:47:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(0,matriz):
	for j in range(0,matriz):
		print(tabela[i,j])

print(matriz)
-- EXECUTION TIME:
0.898937
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 17, in <module>
    for i in range(0,matriz):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(0,matriz):
	for j in range(0,matriz):
		print(tabela[i,j])

#print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(0,tabela):
	for j in range(0,tabela):
		print(matriz[i,j])

#print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:48:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(0,tabela):
	for j in range(0,tabela):
		print(matriz[i,j])

#print(matriz)
-- EXECUTION TIME:
1.1236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 17, in <module>
    for i in range(0,tabela):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:49:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(matriz):
	for j in range(matriz):
		print(tabela[i,j])

#print(tabela)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:49:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(matriz):
	for j in range(matriz):
		print(matriz[i,j])

#print(tabela)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:50:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(0,tabela):
	for j in range(0,tabela):
		print(matriz[i,j])

#print(tabela)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:50:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

for i in range(0,tabela):
	for j in range(0,tabela):
		print(matriz[i,j])

#print(tabela)
-- EXECUTION TIME:
1.12426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1716/main.py", line 17, in <module>
    for i in range(0,tabela):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:55:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

tabela = array([[0,2,2,2,0],
						[2,5,8,5,2],
						[2,8,16,8,2],
						[2,8,16,8,2],
						[2,5,8,5,2],
						[0,2,2,2,0]
					  ])

e1 = int(input("Valor 1: "))
e2 = int(input("Valor 2: "))

matriz = zeros((5,5),dtype=int)

i = e1
j = e2

print(tabela[i,j])

#for i in range(0,tabela):
#	for j in range(0,tabela):
#		print(matriz[i,j])

#print(tabela)
-- EXECUTION TIME:
1.02492
-- TEST CASE 1:
---- input:
3
1
---- correct output:
5
---- user output:
8
-- TEST CASE 2:
---- input:
2
3
---- correct output:
8
---- user output:
8
-- TEST CASE 3:
---- input:
4
2
---- correct output:
2
---- user output:
8
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
